# lolmax

./: .gitignore  README.md  pyproject.toml
lolmax/: app.py  cli.py  config.py  models.py
