[tool.poetry]
name = "lolmax"
version = "0.0.1"
description = "Attempt to wield LangChain for devious personal shit"
packages = [
  { include = "lolmax" },
]
authors = []

[tool.poetry.dependencies]
python = "^3.10"
langchain = "*"
langchain-anthropic = "*"
langchain-google-genai = "*"
langchain-mistralai = "*"
langchain-openai = "*"
flask = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"

[tool.poetry.scripts]
lolmax-cli = "lolmax.cli:main"
lolmax-app = "lolmax.app:main"

[build-system]
requirements = ["poetry.core"]
build-backend = "poetry.core.masonry.api"
